<resources>
    <string name="app_name" translatable="false">Doll Madness Craft</string>
    <string name="validator_too_long">Too long !</string>
    <string name="validator_too_short">Too Short !</string>
    <string name="validator_invalid_name">Invalid Name</string>
    <string name="validator_float_range">%1$.2f .. %2$.2f</string>
    <string name="validator_invalid_number">Invalid number !</string>
    <string name="validator_field_cannot_be_empty">Field cannot be empty !</string>
    <string name="go_create">Create New</string>
    <string name="go_edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="save_settings">Save</string>
    <string name="throw_hint" >"Tap inside the circle to aim and throw."</string>
    <string name="fire_light_hint">Tap inside the circle to aim and fire.</string>
    <string name="aim_light_hint">Tap inside the circle to aim.</string>
    <string name="fire_heavy_hint">Tap inside the circle to aim and fire.</string>
    <string name="aim_heavy_hint">Tap inside the circle to aim.</string>
    <string name="effect_cut_hint">Swipe in a line to slice through everything.</string>
    <string name="effect_glue_hint">\"Tap one item, then another touching it, to bond them together.\"</string>
    <string name="effect_fire_hint">Tap anywhere to ignite a fire bolt.</string>
    <string name="effect_meteor_hint">Tap anywhere to target and strike with a meteor.</string>
    <string name="effect_frost_hint">Tap anywhere to unleash a frosty downpour.</string>
    <string name="insufficient_space">Insufficient space to position the item.</string>
    <string name="gun_reloading_warning">Gun reloading. Loaded in %.1f seconds.</string>
    <string name="edit_existing">Edit Existing</string>
    <string name="item_name_hint">Item name</string>
    <string name="item_type_hint">Item Type</string>
    <string name="choose_template">Don\'t want to start from scratch ? Choose a template</string>
    <string name="template_hint">Template (Optional)</string>
    <string name="item_name">Item name</string>
    <string name="send_for_review">Send for review</string>
    <string name="continue_creating">Continue..</string>
    <string name="create_new">Create New</string>
    <string name="scenario_help_1">To create an item, first, click the Items button. Then, select the desired item and click anywhere on the screen.</string>
    <string name="scenario_help_2">You have the option to switch between dragging and holding at any time.</string>
    <string name="scenario_help_3">To zoom in and out, use a pinch gesture with two fingers. To scroll the map horizontally, drag your finger across the screen.</string>
    <string name="scenario_help_4">When dragging an item, you can drag and drop it onto the desired location.</string>
    <string name="scenario_help_5">Alternatively, hold an item vertically to prepare it for use.</string>
    <string name="scenario_help_6">To select an item, activate the selection button and then click on the item.</string>
    <string name="scenario_help_7">Choose how you want to utilize an item. Some usages, such as triggers, activate immediately upon selection.</string>
    <string name="scenario_help_8">Select an item and specify its usage if it can be utilized without being held.</string>
    <string name="scenario_help_9">Use the mirror button to flip the orientation of an item.</string>
    <string name="rating">Enjoyed the game? Your 5-star rating fuels our progress and enhances your experience.</string>
    <string name="bad_review">Prior to leaving a review on Google Play, please contact us at aymendotbouazizi@gmail.com with any complaints, suggestions, or bug reports. Your message will receive prompt attention within a few days.</string>
    <string name="hint_setting">Hints</string>
    <string name="sound_setting">Sound</string>
    <string name="music_setting">Music</string>
    <string name="map_options">Map Options</string>
    <string name="open_map_option_hint">Open Map</string>
    <string name="wood_house_option_hint">Wood House</string>
    <string name="marble_house_option_hint">Marble House</string>
    <string name="category_sword">Swords</string>
    <string name="category_axe">Axes</string>
    <string name="category_spear">Spears</string>
    <string name="category_produce">Produce</string>
    <string name="category_bullet">Bullets</string>
    <string name="category_shell">Shells</string>
    <string name="category_knife">Knives</string>
    <string name="category_other">Other</string>
    <string name="category_mace">Maces</string>
    <string name="category_grenade">Grenades</string>
    <string name="category_gun">Guns</string>
    <string name="category_heavy_weapon">Heavy Weapons</string>
    <string name="category_projectile">Projectiles</string>
    <string name="category_rocket">Rockets</string>
    <string name="category_arrow">Arrows</string>
    <string name="category_bow">Bows</string>
    <string name="editor_help_1">To start, click the pencil button and add a body to your design.</string>
    <string name="editor_help_2">Connect bodies with joints. There are four types: revolute, elastic, weld, and prismatic. Remember to configure each joint.</string>
    <string name="editor_help_3">Customize the physical properties of each layer using the layer settings.</string>
    <string name="editor_help_4">Enhance your layers by decorating them with graphics that have no physical impact.</string>
    <string name="editor_help_5">Design a gun by creating a projectile indicator, connecting it to a casing indicator to define projectile behavior, and then linking both to a shooting usage type.</string>
    <string name="editor_help_6">Incorporate images into your design and adjust their size or orientation as needed. Use the pipe button to extract colors from the image.</string>
        <string name="dirk">Dirk</string>
        <string name="knife">Knife</string>
        <string name="throwing_knife_1">Throwing Knife 1</string>
        <string name="throwing_knife_2">Throwing Knife 2</string>
        <string name="rocket_1">Rocket 1</string>
        <string name="rocket_2">Rocket 2</string>
        <string name="claymore">Claymore</string>
        <string name="egyptian">Egyptian</string>
        <string name="falchion">Falchion</string>
        <string name="flaming_sword">Flaming Sword</string>
        <string name="gladius">Gladius</string>
        <string name="jian">Jian</string>
        <string name="katana">Katana</string>
        <string name="longsword">Longsword</string>
        <string name="rapier">Rapier</string>
        <string name="sabre">Sabre</string>
        <string name="archery_target">Archery Target</string>
        <string name="chair_1">Chair 1</string>
        <string name="chair_2">Chair 2</string>
        <string name="chair_3">Chair 3</string>
        <string name="dragon">Dragon</string>
        <string name="my_petrol_container">My Petrol Container</string>
        <string name="pandoras_jar">Pandora\'s Jar</string>
        <string name="petrol_container">Petrol Container</string>
        <string name="table_1">Table 1</string>
        <string name="table_2">Table 2</string>
        <string name="table_3">Table 3</string>
        <string name="tutorial">Tutorial</string>
        <string name="frag_grenade_1">Frag. Grenade 1</string>
        <string name="frag_grenade_2">Frag. Grenade 2</string>
        <string name="frag_grenade_3">Frag. Grenade 3</string>
        <string name="frag_grenade_4">Frag. Grenade 4</string>
        <string name="incendiary_bomb">Incendiary Bomb</string>
        <string name="molotov_bomb">Molotov Bomb</string>
        <string name="heavy_machine_gun">Heavy Machine Gun</string>
        <string name="howitzer">Howitzer</string>
        <string name="mini_main_battle_tank">Mini Tank</string>
        <string name="baseball_bat">Baseball Bat</string>
        <string name="cudgel">Cudgel</string>
        <string name="flanged_mace_2">Flanged Mace 2</string>
        <string name="flanged_mace">Flanged Mace 1</string>
        <string name="morning_star">Morning Star</string>
        <string name="warhammer">Warhammer</string>
        <string name="assault_rifle_1">Assault Rifle 1</string>
        <string name="assault_rifle_2">Assault Rifle 2</string>
        <string name="assault_rifle_3">Assault Rifle 3</string>
        <string name="flame_thrower_1">Flame Thrower 1</string>
        <string name="machine_gun_1">Machine Gun 1</string>
        <string name="machine_gun_2">Machine Gun 2</string>
        <string name="pistol_1">Pistol 1</string>
        <string name="pistol_2">Pistol 2</string>
        <string name="pistol_3">Pistol 3</string>
        <string name="revolver">Revolver</string>
        <string name="rifle_1">Rifle 1</string>
        <string name="rifle_2">Rifle 2</string>
        <string name="rocket_launcher_1">Rocket Launcher 1</string>
        <string name="rocket_launcher_2">Rocket Launcher 2</string>
        <string name="submachine_gun_1">Submachine Gun 1</string>
        <string name="submachine_gun_2">Submachine Gun 2</string>
        <string name="javelin">Javelin</string>
        <string name="pike">Pike</string>
        <string name="pilum">Pilum</string>
        <string name="spear">Spear</string>
        <string name="bazooka_rocket">Bazooka Rocket</string>
        <string name="rpg_rocket">RPG Rocket</string>
        <string name="shell_120mm">Shell 120mm</string>
        <string name="shell_155mm">Shell 155mm</string>
        <string name="bow_2">Bow 2</string>
        <string name="bow">Bow 1</string>
        <string name="longbow">Longbow</string>
        <string name="arrow_1">Arrow 1</string>
        <string name="arrow_2">Arrow 2</string>
        <string name="arrow_3">Arrow 3</string>
        <string name="battle_axe">Battle Axe</string>
        <string name="bearded_axe">Bearded Axe</string>
        <string name="francisca">Francisca</string>
        <string name="apple">Apple</string>
        <string name="pumpkin">Pumpkin</string>
        <string name="kiwi">Kiwi</string>
        <string name="lemon">Lemon</string>
        <string name="melon">Melon</string>
        <string name="orange">Orange</string>
        <string name="pear">Pear</string>
        <string name="watermelon">Watermelon</string>
        <string name="bullet_0_50_bmg">Bullet 0.50 BMG</string>
        <string name="bullet_5mm">Bullet 5mm</string>
        <string name="bullet_7mm">Bullet 7mm</string>
        <string name="bullet_9mm">Bullet 9mm</string>
        <string name="petrol_canister">Petrol Canister</string>
       <string name="kerosene_canister">Kerosene Canister</string>
    <string name="rubber">Rubber</string>
    <string name="plastic">Plastic</string>
    <string name="wood">Wood</string>
    <string name="hard_wood">Hard Wood</string>
    <string name="glass">Glass</string>
    <string name="copper">Copper</string>
    <string name="steel">Steel</string>
    <string name="hard_steel">Hard Steel</string>
    <string name="iron">Iron</string>
    <string name="diamond">Diamond</string>
    <string name="graphene">Graphene</string>
    <string name="flesh">Flesh</string>
    <string name="hard_flesh">Hard Flesh</string>
    <string name="concrete">Concrete</string>
    <string name="aluminum">Aluminum</string>
    <string name="brick">Brick</string>
    <string name="bone">Bone</string>
    <string name="granite">Granite</string>
    <string name="kevlar">Kevlar</string>
    <string name="silk">Silk</string>
    <string name="tungsten">Tungsten</string>
    <string name="lead">Lead</string>
    <string name="tin">Tin</string>
    <string name="brass">Brass</string>
    <string name="ceramic">Ceramic</string>
    <string name="asphalt">Asphalt</string>
    <string name="rock">Rock</string>
    <string name="marble">Marble</string>
    <string name="vibration_setting">Vibration</string>
</resources>