<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- FrameLayout with custom background -->
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@drawable/rectangle_top_dialog">

                <!-- ImageView placed inside the yellow rectangle -->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:scaleX="0.5"
                    android:scaleY="0.5"
                    android:src="@drawable/game_title" />

            </FrameLayout>

            <!-- CheckBox for sound option -->
            <CheckBox
                android:id="@+id/soundCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:button="@drawable/custom_checkbox"
                android:text="@string/sound_setting" />
            <CheckBox
                android:id="@+id/musicCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:button="@drawable/custom_checkbox"
                android:text="@string/music_setting" />
            <CheckBox
                android:id="@+id/hintsCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:button="@drawable/custom_checkbox"
                android:text="@string/hint_setting" />
            <CheckBox
                android:id="@+id/vibrationCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:button="@drawable/custom_checkbox"
                android:text="@string/vibration_setting" />
            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/darkGrey" />

            <TextView
                android:id="@+id/hintsOptionsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map_options"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintTop_toBottomOf="@id/continueCheckbox"
                app:layout_constraintStart_toStartOf="parent" />

            <!-- RadioGroup for sound options -->
            <RadioGroup
                android:id="@+id/mapptionsRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:orientation="vertical">

                <!-- Radio buttons for sound options -->
                <RadioButton
                    android:id="@+id/openMapOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:button="@drawable/custom_checkbox"
                    android:text="@string/open_map_option_hint" />

                <RadioButton
                    android:id="@+id/woodMapOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:button="@drawable/custom_checkbox"
                    android:text="@string/wood_house_option_hint" />

                <RadioButton
                    android:id="@+id/marbleMapOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:button="@drawable/custom_checkbox"
                    android:text="@string/marble_house_option_hint" />

            </RadioGroup>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
