<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- FrameLayout with custom background -->
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/rectangle_top_dialog">

            <!-- ImageView placed inside the yellow rectangle -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:scaleX="0.8"
                android:scaleY="0.8"
                android:layout_gravity="center"
                android:src="@drawable/game_title" />

        </FrameLayout>

        <!-- EditText with light red underline -->
        <EditText
            android:id="@+id/itemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:maxLength="20"
            android:backgroundTint="@color/styleRedColor"
            android:hint="@string/item_name_hint"
            android:imeOptions="flagNoFullscreen"
            android:inputType="textEmailAddress" /> <!-- Set custom backgroundTint -->

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/darkGrey" />

        <AutoCompleteTextView
            android:id="@+id/itemTypeAutoComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/item_type_hint"
            android:completionThreshold="0"
            android:imeOptions="flagNoFullscreen"
            android:backgroundTint="@color/styleRedColor" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/darkGrey" />
        <TextView
            android:id="@+id/centeredTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/choose_template"
            android:textSize="11sp"
            android:textColor="@color/lightGrey"
            android:gravity="center" />
        <AutoCompleteTextView
            android:id="@+id/itemTemplateAutoComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/template_hint"
            android:imeOptions="flagNoFullscreen"
            android:backgroundTint="@color/styleRedColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/linkTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="100dp"
                android:clickable="true"
                android:focusable="true" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
